pages/dkp/kommander/1.0/introducing-kommander/index.md
---
layout: layout.pug
navigationTitle: Introducing Kommander
title: Introducing Kommander
featureMaturity:
excerpt: Deploy and manage Kubernetes on an enterprise scale
category: K-Sphere
menuWeight: 2
---

Kommander delivers visibility and management of any Kubernetes cluster, whether on-prem or cloud, regardless of distribution being used. Organizations can gain better control over existing deployments without service interruptions and create standardization around how new clusters are configured and used.

Kommander was developed to address the broad issues caused by Kubernetes “cluster sprawl.” D2iQ’s Kommander delivers federated management, governance, and visibility across an organization’s expansive use of Kubernetes clusters. As various parts of the organization require new Kubernetes clusters and associated data services, Kommander simplifies the provisioning of new services and creates greater policy-driven consistency across Kubernetes clusters within the environment. This capability allows for greater standardization of Kubernetes ensuring easier support paths for application services. This level of broad control helps organizations meet risk and compliance demands as they govern how and where new application services are used, and who is able to engage in policy and operational needs of those services.

## Kommander features and benefits

| **Features**                                                                                      | **Benefits**                                                                                                                                                                                                                                             |
| ------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| **Operations Dashboard**                                                                          | Provides instant visibility and operational efficiency into Kubernetes cluster landscape, helping an organization understand resources and utilization.                                                                                                  |
| [**Centralized Monitoring, Logging and Alerting**](/dkp/kommander/1.0/centralized-monitoring) | Enables central monitoring and alerting of issues arising in operational and application infrastructure and deep cross-cluster logging for easier troubleshooting. As issues are detected, they are resolved before they escalate, saving valuable time. |
| [**Cluster Configuration Manager**](/dkp/kommander/1.0/clusters)                              | Simplifies and delivers consistent configuration for services and cross cluster operations.                                                                                                                                                              |
| [**Services Catalog**](/dkp/kommander/1.0/projects/addon-catalog)                             | Push button catalog of current cloud native services. This helps organizations quickly deploy services to multiple clusters. Governance-based access to data services ensures roles and responsibilities are maintained.                                 |
| **Service-Mesh Integration**                                                                      | Support multiple clusters for larger “as-a-service” needs across many different project teams by combining D2iQ’s Kommander with integrated service mesh.                                                                                                |
| **Service Version Control**                                                                       | Ensures conformance to sanctioned service versions, reducing security exposure and simplifying services supportability.                                                                                                                                  |
| **Integration with KUDO Operators**                                                               | Eases the deployment of stateful data services for use in Kubernetes with push-button deployment of services and professional support offerings leveraging the KUDO framework.                                                                           |
| **Governance and Policy Administration**                                                          | Assert centralized, delegated, role based, access control and cluster policy to govern clusters, associated services, geographic limitations and to create lines-of-separation across various project initiatives.                                       |
| **Centralized Authentication**                                                                    | Leverage existing authentication and directory services for secure access and single sign-on to broad cluster based resources.                                                                                                                           |
